--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     <div id="noteModal" style="display: none;">
         <!-- Content for the note modal -->
         <div style="display: flex; flex-direction: column; align-items: center;">
-            <div style="align-self: self-end;">
+            <div style="padding-bottom: 20px;">
                 <label for="node-tag">Node Tag:</label>
                 <input type="text" id="node-tag" value="##" style="width:80px;" />
             </div>
-            <div style="align-self: start;">
+            <div>
                 <label for="node-tag">Link Tag:</label>
                 <input type="text" id="ref-tag" value="[[" style="width:80px;" />
             </div>
