Right Click Connect, Fix Halt Ai

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
   <script type="module" crossorigin src="./assets/index.c16e5b52.js"></script>
-  <link rel="stylesheet" href="./assets/index.6e1b9f4f.css">
+  <link rel="stylesheet" href="./assets/index.e4a968ca.css">
 </head>
 
 <body id="body">
@@ -230,10 +230,15 @@
                 <input type="checkbox" id="connectNotes">
                 <label for="connectNotes">Connect</label>
             </div>
-            
+
 
             <button class="api-modal-button" onclick="confirmImport()">Confirm Import</button>
         </div>
+    </div>
+
+    <div id="nodeConnectionModal" style="display:none;">
+        <input type="text" id="connectModalSearchBar" placeholder="search notes...">
+        <ul id="nodeList"></ul>
     </div>
 
     <div id="alertModal" style="display: none;">
@@ -1190,6 +1195,8 @@
     <script src="js/nodes/nodeinteraction/togglenodestate.js"></script>
     <script src="js/nodes/nodeinteraction/filternodes.js"></script>
     <script src="js/nodes/nodeinteraction/bundlecode.js"></script>
+    <script src="js/nodes/nodeinteraction/modalconnect.js"></script>
+
     <script src="js/nodes/createnodes/window.js"></script>
     <script src="js/nodes/createnodes/createnodes.js"></script>
     <script src="js/nodes/createnodes/nodedef.js"></script>
