+Fractal Types, Fix Scrolling on Firefox

--- a/index.html
+++ b/index.html
@@ -714,13 +714,19 @@
                                             <label style="white-space: nowrap;">
                                                 <span id="equation"></span>
                                             </label>
-                                            <div id="julia-constant" style="display: none;">(<span id="julia-x">0.256</span>, <span id="julia-y">0.01</span>)
+                                            <div id="julia-constant" style="display: none;">
+                                                (<span id="julia-x">0.256</span>, <span id="julia-y">0.01</span>)
                                             </div>
                                             <div class="dropdown-container">
                                                 <select id="fractal-select" class="model-selector custom-select">
                                                     <option value="mandelbrot">Mandelbrot</option>
                                                     <option value="burningShip">Burning Ship</option>
                                                     <option value="julia">Julia Set</option>
+                                                    <option value="tricorn">Tricorn</option>
+                                                    <option value="buffalo">Buffalo</option>
+                                                    <option value="henon">Henon Map</option>
+                                                    <option value="ikeda">Ikeda Map</option>
+                                                    <!--<option value="inverseMandelbrot">Inverse Brot</option>-->
                                                 </select>
                                             </div>
                                         </div>
