+Fractal Types, Fix Scroll on Firefox

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
   <script type="module" crossorigin src="./assets/index.c16e5b52.js"></script>
-  <link rel="stylesheet" href="./assets/index.e4a968ca.css">
+  <link rel="stylesheet" href="./assets/index.de466080.css">
 </head>
 
 <body id="body">
@@ -711,13 +711,19 @@
                                             <label style="white-space: nowrap;">
                                                 <span id="equation"></span>
                                             </label>
-                                            <div id="julia-constant" style="display: none;">(<span id="julia-x">0.256</span>, <span id="julia-y">0.01</span>)
+                                            <div id="julia-constant" style="display: none;">
+                                                (<span id="julia-x">0.256</span>, <span id="julia-y">0.01</span>)
                                             </div>
                                             <div class="dropdown-container">
                                                 <select id="fractal-select" class="model-selector custom-select">
                                                     <option value="mandelbrot">Mandelbrot</option>
                                                     <option value="burningShip">Burning Ship</option>
                                                     <option value="julia">Julia Set</option>
+                                                    <option value="tricorn">Tricorn</option>
+                                                    <option value="buffalo">Buffalo</option>
+                                                    <option value="henon">Henon Map</option>
+                                                    <option value="ikeda">Ikeda Map</option>
+                                                    <!--<option value="inverseMandelbrot">Inverse Brot</option>-->
                                                 </select>
                                             </div>
                                         </div>
