--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
                                         <label for="model-select" style="margin-right: 10px;">GLOBAL Model:</label>
                                         <div class="dropdown-container">
                                             <select id="model-select" class="model-selector custom-select">
+                                                <option value="gpt-4o">gpt-4o</option>
                                                 <option value="gpt-4">gpt-4</option>
                                                 <option value="gpt-4-0125-preview">gpt-4-0125</option>
                                                 <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
